try to make logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,26 @@
   <!-- Bootstrap styles -->
   <link rel="stylesheet" href="libraries/bootstrap.min.css">
   <!-- Site styles -->
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/font.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/media.css">
 </head>
-<body>
-  <header class="header">
-    <nav class="nav container"></nav>
+
+<body class="body">
+  <header>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg">
+        <a href="#!" class="logo">
+          <div class="logo__before-lines">
+            <span class="logo__before-line"></span>
+          </div>
+          <span class="logo_purple">my</span>work
+          <div class="logo__after-lines">
+            <span class="logo__after-line"></span>
+          </div>
+        </a>
+      </nav>
+    </div>
   </header>
   <main></main>
   <footer></footer>
@@ -19,4 +35,5 @@
   <!-- Bootstrap script -->
   <script src="libraries/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
