--- a/index.html
+++ b/index.html
@@ -21,16 +21,56 @@
         <button class="navbar-toggler fa header__toggler" data-bs-toggle="collapse" data-bs-target="#nav"></button>
         <div class="collapse navbar-collapse" id="nav">
           <ul class="ms-auto list-unstyled d-flex flex-column flex-lg-row align-items-start align-items-lg-center">
-            <li><a href="#!" class="me-0 header__link">About me</a></li>
-            <li><a href="#!" class="me-0 header__link">Works</a></li>
-            <li><a href="#!" class="me-0 header__button">to order</a></li>
+            <li><a href="#!" class="header__link">About me</a></li>
+            <li><a href="#!" class="header__link">Works</a></li>
+            <li><a href="#!" class="header__button">to order</a></li>
             <li><a href="#!" class="header__phone fa"></a></li>
           </ul>
         </div>
       </nav>
     </div>
   </header>
-  <main></main>
+  <main>
+    <section class="intro"> <!-- Intro -->
+      <div class="container"> <!-- Intro container -->
+        <div id="slider" class="carousel slide " data-bs-ride="carousel"> <!-- Slider -->
+          <div class="row align-items-center"> <!-- row -->
+            <div class="col-12 col-lg-6 intro__left">
+              <p class="intro__description col-12 col-md-10">My beginning</p>
+              <h1 class="intro__title col-12 col-md-10">Self-development and training in the training center</h1>
+              <a href="#!" class="intro__button col-10 col-sm-6">GET STARTED NOW</a>
+              <div class="row row-cols-2 row-cols-sm-2 justify-content-center w-100 justify-content-sm-between">
+                <div class="intro__brand">
+                  <img src="images/html.png" alt="HTML5" class="intro__brands-logo">
+                  <h3 class="intro__brands-name">HTML</h3>
+                </div>
+                <div class="intro__brand">
+                  <img src="images/css.png" alt="CSS3" class="intro__brands-logo">
+                  <h3 class="intro__brands-name">CSS</h3>
+                </div>
+                <div class="intro__brand">
+                  <svg class="intro__brands-logo intro__brands-logo_purple" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg>
+                  <h3 class="intro__brands-name">bootstrap 5</h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-lg-6 intro__images">
+              <div class="carousel-item active">
+                <img class="intro__img" src="images/slider item.png" alt="Two human making design">
+              </div>
+              <div class="carousel-item">
+                <img class="intro__img" src="images/slider item 2.png" alt="Two human making design">
+              </div>
+            </div>
+            <div class="col-12 m-0 mt-5 p-0 carousel-indicators  position-static intro__indicators">
+              <div class="intro__dot active" data-bs-target="#slider" data-bs-slide-to="0"></div>
+              <div class="intro__dot" data-bs-target="#slider" data-bs-slide-to="1"></div>
+            </div>
+          </div> <!-- row -->
+        </div> <!-- Slider -->
+      </div> <!-- Intro container -->
+    </section> <!-- Intro end -->
+  </main>
   <footer></footer>
   <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg> -->
   <!-- Bootstrap script -->
