--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
   <main>
     <section class="intro"> <!-- Intro -->
       <div class="container"> <!-- Intro container -->
-        <div id="slider" class="carousel slide " data-bs-ride="carousel"> <!-- Slider -->
+        <div id="slider" class="carousel slide" data-bs-ride="carousel"> <!-- Slider -->
           <div class="row align-items-center"> <!-- row -->
             <div class="col-12 col-lg-6 intro__left">
               <p class="intro__description col-12 col-md-10">My beginning</p>
               <h1 class="intro__title col-12 col-md-10">Self-development and training in the training center</h1>
               <a href="#!" class="intro__button col-10 col-sm-6">GET STARTED NOW</a>
-              <div class="row row-cols-2 row-cols-sm-2 justify-content-center w-100 justify-content-sm-between">
+              <div class="row row-cols-2 row-cols-sm-3 justify-content-center w-100 justify-content-sm-between">
                 <div class="intro__brand">
                   <img src="images/html.png" alt="HTML5" class="intro__brands-logo">
                   <h3 class="intro__brands-name">HTML</h3>
@@ -69,6 +69,10 @@
           </div> <!-- row -->
         </div> <!-- Slider -->
       </div> <!-- Intro container -->
+      <div class="rectangle rectangle_1"></div>
+      <div class="rectangle rectangle_2"></div>
+      <div class="rectangle rectangle_3"></div>
+      <div class="rectangle rectangle_4"></div>
     </section> <!-- Intro end -->
   </main>
   <footer></footer>
