--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
       </nav>
     </div>
   </header>
+  
   <main>
     <section class="intro"> <!-- Intro -->
       <div class="container"> <!-- Intro container -->
         <div id="slider" class="carousel slide" data-bs-ride="carousel"> <!-- Slider -->
           <div class="row align-items-center"> <!-- row -->
-            <div class="col-12 col-lg-6 intro__left">
+            <div class="col-12 col-lg-6 intro__left"> <!-- Left Side -->
               <p class="intro__description col-12 col-md-10">My beginning</p>
               <h1 class="intro__title col-12 col-md-10">Self-development and training in the training center</h1>
               <a href="#!" class="intro__button col-10 col-sm-6">GET STARTED NOW</a>
@@ -53,15 +54,15 @@
                   <h3 class="intro__brands-name">bootstrap 5</h3>
                 </div>
               </div>
-            </div>
-            <div class="col-12 col-lg-6 intro__images">
+            </div> <!-- Left Side -->
+            <div class="col-12 col-lg-6 intro__images"> <!-- Right Side -->
               <div class="carousel-item active">
                 <img class="intro__img" src="images/slider item.png" alt="Two human making design">
               </div>
               <div class="carousel-item">
-                <img class="intro__img" src="images/slider item 2.png" alt="Two human making design">
+                <img class="intro__img" src="images/slider item 2.png" alt="Playing childrens">
               </div>
-            </div>
+            </div> <!-- Right Side -->
             <div class="col-12 m-0 mt-5 p-0 carousel-indicators  position-static intro__indicators">
               <div class="intro__dot active" data-bs-target="#slider" data-bs-slide-to="0"></div>
               <div class="intro__dot" data-bs-target="#slider" data-bs-slide-to="1"></div>
@@ -74,6 +75,25 @@
       <div class="rectangle rectangle_3"></div>
       <div class="rectangle rectangle_4"></div>
     </section> <!-- Intro end -->
+    
+    <section class="about"> <!-- About start -->
+      <img src="images/background_1.png" alt="background Shape" class="about__bg shape">
+      <div class="container"> <!-- Container -->
+        <div class="row justify-content-lg-between justify-content-center"> <!-- Row -->
+          <div class="col-12 col-md-10 col-lg-5 about__left d-flex justify-content-end">
+            <p class="about__word">my
+              work for</p>
+            <img class="about__image" src="images/info.png" alt="Man working on pc">
+          </div>
+          <div class="col-12 col-lg-6 about__right">
+            <h2 class="about__title">What is Frond-End</h2>
+            <p class="about__text">it is the development of of the user interface and functions that run on on the client side of a website or application This is everything that a user sees when opening a or aweb page and with which he interacts.</p>
+            <p class="about__text">This is everything that a user sees when opening a web page and with which he interacts.</p>
+            <a href="#!" class="about__button">go to work</a>
+          </div>
+        </div> <!-- Row -->
+      </div> <!-- Container -->
+    </section><!-- About end -->
   </main>
   <footer></footer>
   <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 118 94" role="img"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.509 0c-6.733 0-11.715 5.893-11.492 12.284.214 6.14-.064 14.092-2.066 20.577C8.943 39.365 5.547 43.485 0 44.014v5.972c5.547.529 8.943 4.649 10.951 11.153 2.002 6.485 2.28 14.437 2.066 20.577C12.794 88.106 17.776 94 24.51 94H93.5c6.733 0 11.714-5.893 11.491-12.284-.214-6.14.064-14.092 2.066-20.577 2.009-6.504 5.396-10.624 10.943-11.153v-5.972c-5.547-.529-8.934-4.649-10.943-11.153-2.002-6.484-2.28-14.437-2.066-20.577C105.214 5.894 100.233 0 93.5 0H24.508zM80 57.863C80 66.663 73.436 72 62.543 72H44a2 2 0 01-2-2V24a2 2 0 012-2h18.437c9.083 0 15.044 4.92 15.044 12.474 0 5.302-4.01 10.049-9.119 10.88v.277C75.317 46.394 80 51.21 80 57.863zM60.521 28.34H49.948v14.934h8.905c6.884 0 10.68-2.772 10.68-7.727 0-4.643-3.264-7.207-9.012-7.207zM49.948 49.2v16.458H60.91c7.167 0 10.964-2.876 10.964-8.281 0-5.406-3.903-8.178-11.425-8.178H49.948z" fill="currentColor"></path></svg> -->
